# pingpup

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  start.bat
.github/workflows/: build-apk.yml
android/AudioSender/: build.gradle  gradlew  settings.gradle
android/AudioSender/app/: build.gradle  proguard-rules.pro
android/AudioSender/app/src/main/: AndroidManifest.xml
android/AudioSender/app/src/main/java/com/lanaudio/audiosender/: MainActivity.kt
android/AudioSender/app/src/main/res/drawable/: ic_launcher.xml
android/AudioSender/app/src/main/res/layout/: activity_main.xml
src/: main.cpp
src/audio/: portaudio_output.cpp  portaudio_output.hpp  ring_buffer.hpp  wasapi_capture.cpp  wasapi_capture.hpp
src/mixer/: mixer.cpp  mixer.hpp
src/network/: packet.hpp  tcp_server.cpp  tcp_server.hpp  udp_receiver.cpp  udp_receiver.hpp
src/ui/: gui.cpp  gui.hpp
src/utils/: logger.hpp
